# verbnet-2-actionmodel

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
analysis/: extracted_counting.ipynb  extracted_links.ipynb  extracted_prediates_count.ipynb  verbnet_class_and_frames.ipynb  verbnet_predicates.ipynb  verbnet_themroles.ipynb
examples/: extracted_PDDL.json  extracted_example_texts.json  extracted_filtered_STRIPS.json  extracted_unfiltered_STRIPS.json
src/: main.py
src/data/: activity_predicates.txt  temporal_predicates.txt  vn_semanticrole_hierarchy.json
src/vn2am/: converter.py  dedup.py  parser.py  semantic_tree.py  utils.py
